--- a/react-project-02/index.html
+++ b/react-project-02/index.html
@@ -1,3 +1,4 @@
+<!-- git push -u https://github.com/ASTHA864/React -->
 <!-- http://localhost:5173/ -->
  <!-- Components -> just a function that use code which seems like html to render.
  1. Class base components
